# carbon-aware-optimal-policy

./: .gitignore  README.md  pyproject.toml  validate_configs.py
_backup/: model_C1_controller_acc0.95_lat0.015_2024-02-20_20251216_134215_success.json  model_C1_controller_acc0.95_lat0.015_2024-05-20_20251216_134619_success.json  model_C4_controller_acc0.819_lat0.00_2024-02-20_20251216_132550_success.json  model_C4_controller_acc0.819_lat0.00_2024-05-20_20251216_133002_success.json  model_C4_controller_acc0.819_lat0.00_2024-08-20_20251216_133407_success.json  model_C4_controller_acc0.819_lat0.00_2024-11-20_20251216_133812_success.json
data/: data.config.json  data.config.json.example  generate_data.py  generation_config.py  oracle_runner.py  recombine_data.py
data/training_data/: combined_dataset.npz  controller_acc0.819_lat0.006_succ20_small5_large8_carb7_cap105_rate0.001598_combined.npz  controller_acc0.819_lat0.006_succ20_small5_large8_carb7_cap105_rate0.001598_test.npy  controller_acc0.819_lat0.006_succ20_small5_large8_carb7_cap105_rate0.001598_test_actions.npy  controller_acc0.819_lat0.006_succ20_small5_large8_carb7_cap105_rate0.001598_train_actions.npy  (+51 more)
docs/: docs.html  index.html  report.html  script.js  styles.css
model-profiler/: benchmark_power.py  model.config.json  model_results.py  power_profiler.py  power_profiles.json  yolo_model.py
results/: model_results.py  results.config.json  results.py
simulation/: batch_run.py  config.json  run.py  simulation.config.json
training/: __init__.py  test_model.pth  train.py  training.config.json
(+133 files in other folders)
