[project]
name = "oc-security-camera-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "ultralytics>=8.3.237",
    "torch>=2.0.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
